# Matrix-Bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: rust.yml
deployment/: check-updates.sh  cronjob.sh  start-cronjob.sh
src/: access.rs  commands.rs  main.rs  mensa.rs
src/alerts/: commands.rs  fetcher.rs  mod.rs  scheduler.rs
